Set boiler plate code to continue resume

--- a/index.html
+++ b/index.html
@@ -27,24 +27,26 @@
                         <h2 class="title">Full Stack Developer</h2>
                     </div>
                 </div>
-                <div class="row no-gutters ">
+                <div class="row no-gutters">
                     <div class="col">
-                        <ul id="nav" class="list-inline menucontainer">
-                            <li class="col-6 col-sm-3 ui-menu-item-home list-inline-item menu-item">
-                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home"
-                                        aria-hidden="true"></i><span>Home</span></a>
+                        <ul id="nav" class="list-inline menucontainer row">
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-home menuitem">
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-item-resume list-inline-item menu-item">
-                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
-                                        aria-hidden="true"></i><span>Resume</span></a>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-resume menuitem">
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-item-contact list-inline-item menu-item">
-                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o"
-                                        aria-hidden="true"></i><span>Contact</span></a>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-contact menuitem">
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class=" fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-item-download list-inline-item menu-item">
-                                <a href="assets/cv/mycv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i
-                                        class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-interests menuitem">
+                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Interests</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
+                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
+                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
@@ -112,7 +114,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-8 big-col-three-reasons section-column">
+            <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
                         <h3 class="section-heading uppercase">About Me</h3>
@@ -126,8 +128,8 @@
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">What do I do?</h4>
-                                <p>I am a skilled Full Stack developer with a wealth of divers
-                                    life and technical experience that I bring to every project.
+                                <p>
+                                    I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.
                                 </p>
                             </div>
                         </div>
@@ -138,10 +140,9 @@
                                 <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">HOw do I do it?</h4>
-                                <p>I follow form as well a function. I know the aesthetic of effective
-                                    design combined with application speed, security and reliability combined
-                                    to make a great user experience.
+                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <p>
+                                    I follow form as well as function. I know that the aesthetics of effective design combined with application speed, security and reliability combine to create a great user experience.
                                 </p>
                             </div>
                         </div>
@@ -153,9 +154,8 @@
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
-                                <p>I work quickly and effectively in getting things built and working across
-                                    the stack. I am an excellent communicator who thrives in bright and enthusiastic
-                                    teams and I am also a self starter when working solo.
+                                <p>
+                                    I work quickly and effectively in getting things built and working across the stack. I'm an excellent communicator who thrives in bright and enthusiastic teams and I'm also a self starter when working solo.
                                 </p>
                             </div>
                         </div>
